--- a/site/assets/scss/_component-examples.scss
+++ b/site/assets/scss/_component-examples.scss
@@ -86,7 +86,7 @@
   position: relative;
   padding: 1rem;
   margin: 1rem ($bd-gutter-x * -.5) 0;
-  border: solid $gray-300;
+  border: solid var(--bs-border-color);
   border-width: 1px 0 0;
   @include clearfix();
 
@@ -98,7 +98,7 @@
     @include border-top-radius(.25rem);
 
     + .bd-clipboard + .highlight {
-      @include border-bottom-radius(.25rem);
+      @include border-top-radius(0);
     }
   }
 
@@ -317,10 +317,11 @@
 .highlight {
   padding: .75rem ($bd-gutter-x * .5);
   margin-bottom: 1rem;
-  background-color: var(--bs-gray-100);
+  background-color: var(--bs-tertiary-bg);
 
   @include media-breakpoint-up(md) {
     padding: .75rem 1.5rem;
+    @include border-radius(.375rem);
   }
 
   pre {
@@ -339,7 +340,7 @@
 
   pre code {
     @include font-size(inherit);
-    color: $gray-900; // Effectively the base text color
+    color: var(--bs-body-color); // Effectively the base text color
     word-wrap: normal;
   }
 }
