--- a/site/layouts/partials/home/masthead.html
+++ b/site/layouts/partials/home/masthead.html
@@ -1,11 +1,11 @@
 <div class="bd-masthead mb-3" id="content">
-  <div class="container-xxl bd-gutter">
+  <div class="container bd-gutter">
     <div class="col-md-8 mx-auto text-center">
-      <a class="d-block d-sm-inline-block py-2 px-3 mb-4 text-dark text-decoration-none rounded-3 masthead-notice" href="https://blog.getbootstrap.com/2021/08/04/bootstrap-5-1-0/">
+      <a class="d-block d-sm-inline-block py-2 px-3 mb-4 text-body text-decoration-none rounded-3 masthead-notice" href="https://blog.getbootstrap.com/2021/08/04/bootstrap-5-1-0/">
         <strong>New in v5.1:</strong> CSS Grid, offcanvas navbars, improved utilities, and more!
         </a>
       <img src="/docs/{{ .Site.Params.docs_version }}/assets/brand/bootstrap-logo-shadow.png" width="200" height="165" alt="Bootstrap" class="d-block mx-auto mb-3">
-      <h1 class="mb-3 fw-semibold">Build fast, responsive sites with&nbsp;Bootstrap</h1>
+      <h1 class="mb-3 fw-semibold lh-1">Build fast, responsive sites with&nbsp;Bootstrap</h1>
       <p class="lead mb-4">
         Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.
       </p>
